# cgo_bitcoind

./: README.md  c_archive_build.sh  cpp_proj_build.sh  jsonrpc_bitcoind.cpp  jsonrpc_bitcoind.go  jsonrpc_bitcoind.h  main  main.cpp  main.go  proj_build.sh  test.h
GetBlockChainInfoTest/: CMakeLists.txt  C_import.go  GetBlockChainInfo.h  Test_C_GBCI.cpp  test_GetBlockChainInfo.go
test_files/: GetBlockChainInfo.h  test.h
